Fixed bugs with z-index ordering of chat popups.

--- a/less/style.less
+++ b/less/style.less
@@ -473,7 +473,6 @@ section.content {
 		width: 24px !important;
 		height: 24px !important;
 		cursor: pointer;
-		border-radius: 3px;
 		padding: 0;
 		outline: 0;
 		font-size: 0;
